jlamontSC-test/src/objects/Premium__c.object
<CustomObject>
    <description>Junction object between Campaign and Premium Item</description>
    <fields>
        <fullName>Form_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Premiums</relationshipLabel>
        <relationshipName>Premiums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Minimum_Donation__c</fullName>
        <label>Minimum Donation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Premium Item</label>
        <referenceTo>Premium_Item__c</referenceTo>
        <relationshipLabel>Premiums</relationshipLabel>
        <relationshipName>Premiums</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Premium</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Premium Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Premiums</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>